Clean up notebook & example test

--- a/Harmony.ipynb
+++ b/Harmony.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "parameters"
@@ -30,84 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing the uat environment: harmony.uat.earthdata.nasa.gov\n"
-     ]
-    }
-   ],
-   "source": [
-    "harmony_hostname = {\n",
-    "    'sbx': 'harmony.sbx.earthdata.nasa.gov',\n",
-    "    'sit': 'harmony.sit.earthdata.nasa.gov',\n",
-    "    'uat': 'harmony.uat.earthdata.nasa.gov',\n",
-    "    'prod': 'harmony.earthdata.nasa.gov'\n",
-    "}[environment]\n",
-    "\n",
-    "print(f'Testing the {environment} environment: {harmony_hostname}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "\n",
+    "import harmony.util\n",
+    "import pytest\n",
     "import ipytest\n",
+    "\n",
     "ipytest.autoconfig()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def url(uri: str) -> str:\n",
-    "    return f'https://{harmony_hostname}/{uri}'\n",
-    "\n",
-    "def find_by_attr(l: list, attr: str, val: str) -> str:\n",
-    "    for i in l:\n",
-    "        if i[attr] == val:\n",
-    "            return i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".                                                                                                                                                                              [100%]\n",
-      "1 passed in 0.50s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%run_pytest[clean]\n",
-    "\n",
-    "# Example test\n",
-    "def test_services_are_configured_in_harmony():\n",
-    "    services = [\n",
-    "        'harmony/gdal', \n",
-    "        'asfdataservices/gdal-subsetter', \n",
-    "        'podaac/l2-subsetter'\n",
-    "    ]\n",
-    "    \n",
-    "    versions = requests.get(url('versions')).json()\n",
-    "    \n",
-    "    for s in services:\n",
-    "        assert find_by_attr(versions, 'name', s) is not None"
    ]
   },
   {
@@ -115,7 +46,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%run_pytest[clean]\n",
+    "\n",
+    "@pytest.mark.parametrize('service_name', [\n",
+    "    'harmony/gdal', \n",
+    "    'asfdataservices/gdal-subsetter', \n",
+    "    'podaac/l2-subsetter'\n",
+    "])\n",
+    "def test_services_are_configured_in_harmony(service_name: str):\n",
+    "    services = harmony.util.api(environment, 'versions')\n",
+    "    \n",
+    "    assert any([s['name'] == service_name for s in services]) == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.exit(ipytest.exit_code)"
+   ]
   }
  ],
  "metadata": {
