Add harmony pkg to the Docker image.

--- a/Harmony.ipynb
+++ b/Harmony.ipynb
@@ -38,7 +38,8 @@
     "import pytest\n",
     "import ipytest\n",
     "\n",
-    "ipytest.autoconfig()"
+    "ipytest.autoconfig()\n",
+    "ipytest.config.raise_on_error = True"
    ]
   },
   {
@@ -57,16 +58,7 @@
     "def test_services_are_configured_in_harmony(service_name: str):\n",
     "    services = harmony.util.api(environment, 'versions')\n",
     "    \n",
-    "    assert any([s['name'] == service_name for s in services]) == True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sys.exit(ipytest.exit_code)"
+    "    assert any([s['name'] == service_name for s in services])"
    ]
   }
  ],
