--- a/Harmony.ipynb
+++ b/Harmony.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Image](NASA_logo.svg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Harmony Regression Test Suite"
    ]
   },
@@ -58,7 +51,8 @@
     "def test_services_are_configured_in_harmony(service_name: str):\n",
     "    services = harmony.util.api(environment, 'versions')\n",
     "    \n",
-    "    assert any([s['name'] == service_name for s in services])"
+    "    assert any([s['name'] == service_name for s in services])\n",
+    "    assert 1 == 2"
    ]
   }
  ],
@@ -78,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.0-final"
   }
  },
  "nbformat": 4,
