Add user data for EC2 instance to install Docker

--- a/Harmony.ipynb
+++ b/Harmony.ipynb
@@ -51,8 +51,7 @@
     "def test_services_are_configured_in_harmony(service_name: str):\n",
     "    services = harmony.util.api(environment, 'versions')\n",
     "    \n",
-    "    assert any([s['name'] == service_name for s in services])\n",
-    "    assert 1 == 2"
+    "    assert any([s['name'] == service_name for s in services])"
    ]
   }
  ],
