--- a/test/Harmony.ipynb
+++ b/test/Harmony.ipynb
@@ -56,6 +56,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -71,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0-final"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
