Update test script to use proper SIT LB host

--- a/test/Harmony.ipynb
+++ b/test/Harmony.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "parameters"
@@ -17,8 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "# ['sbx', 'sit', 'uat', 'prod']\n",
-    "environment = 'uat'"
+    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
    ]
   },
   {
@@ -49,14 +48,13 @@
     "    'podaac/l2-subsetter'\n",
     "])\n",
     "def test_services_are_configured_in_harmony(service_name: str):\n",
-    "    services = harmony.util.api(environment, 'versions')\n",
+    "    services = harmony.util.api(harmony_host_url, 'versions')\n",
     "    \n",
     "    assert any([s['name'] == service_name for s in services])"
    ]
   }
  ],
  "metadata": {
-  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -72,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.0-final"
   }
  },
  "nbformat": 4,
