HARMONY-570: Testing Bamboo deployment is marked as failed if test fails.

--- a/test/Harmony.ipynb
+++ b/test/Harmony.ipynb
@@ -50,7 +50,8 @@
     "def test_services_are_configured_in_harmony(service_name: str):\n",
     "    services = harmony.util.api(harmony_host_url, 'versions')\n",
     "    \n",
-    "    assert any([s['name'] == service_name for s in services])"
+    "    assert any([s['name'] == service_name for s in services])\n",
+    "    assert 1==2"
    ]
   }
  ],
