Revert "HARMONY-570: Testing Bamboo deployment is marked as failed if test fails."
This reverts commit edd340fc4b94a049f90c6d913bcc1c9ba6c443c9.

--- a/test/Harmony.ipynb
+++ b/test/Harmony.ipynb
@@ -50,8 +50,7 @@
     "def test_services_are_configured_in_harmony(service_name: str):\n",
     "    services = harmony.util.api(harmony_host_url, 'versions')\n",
     "    \n",
-    "    assert any([s['name'] == service_name for s in services])\n",
-    "    assert 1==2"
+    "    assert any([s['name'] == service_name for s in services])"
    ]
   }
  ],
