HARMONY-571: Use mount point for notebook files to make development quicker

--- a/test/harmony-regression/HarmonyRegression.ipynb
+++ b/test/harmony-regression/HarmonyRegression.ipynb
@@ -23,13 +23,9 @@
    },
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload\n",
-    "%matplotlib inline\n",
-    "\n",
-    "import sys\n",
-    "# Install dependencies into the Jupyter Kernel\n",
-    "!{sys.executable} -m pip install -q -r notebook_helpers/requirements.txt\n",
+    "# %load_ext autoreload\n",
+    "# %autoreload\n",
+    "# %matplotlib inline\n",
     "\n",
     "# Import libraries used throughout the notebook\n",
     "from notebook_helpers import get, post, show, get_data_urls, show_async, show_async_condensed, show_shape, print_async_status, check_bbox_subset, check_stac"
@@ -114,13 +110,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Sample Sync Request - Variable Subsetting"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -196,7 +185,7 @@
     "for job in body['jobs']:\n",
     "    print_async_status(job)\n",
     "\n",
-    "#Cancel one\n",
+    "# #Cancel one\n",
     "my_jobs_cancel_root=my_jobs+'/{job_id}/cancel'\n",
     "response = post(my_jobs_cancel_root.format(job_id=response3.json()['jobID']))\n",
     "\n",
@@ -524,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ASF's GDAL Subsetter"
+    "### ASF's GDAL Subsetter (These cells are conmented out until issues with the ASF service are resolved)"
    ]
   },
   {
@@ -542,19 +531,19 @@
    },
    "outputs": [],
    "source": [
-    "response = get(\n",
-    "    coverages_root.format(\n",
-    "        root=harmony_host_url,\n",
-    "        collection='C1225776654-ASF',\n",
-    "        variable='science%2Fgrids%2Fdata%2Famplitude'), \n",
-    "        params={\n",
-    "            'granuleId' : 'G1235282694-ASF',\n",
-    "            'subset': [\n",
-    "            'lon(37:40)', \n",
-    "            'lat(23:24)', \n",
-    "            'time(\"2014-10-30T15:00:00Z\":\"2014-10-30T15:59:00Z\")']})\n",
+    "# response = get(\n",
+    "#     coverages_root.format(\n",
+    "#         root=harmony_host_url,\n",
+    "#         collection='C1225776654-ASF',\n",
+    "#         variable='science%2Fgrids%2Fdata%2Famplitude'), \n",
+    "#         params={\n",
+    "#             'granuleId' : 'G1235282694-ASF',\n",
+    "#             'subset': [\n",
+    "#             'lon(37:40)', \n",
+    "#             'lat(23:24)', \n",
+    "#             'time(\"2014-10-30T15:00:00Z\":\"2014-10-30T15:59:00Z\")']})\n",
     "            \n",
-    "show(response)\n"
+    "# show(response)\n"
    ]
   },
   {
@@ -572,18 +561,18 @@
    },
    "outputs": [],
    "source": [
-    "response = get(\n",
-    "    coverages_root.format(\n",
-    "        root=harmony_host_url,\n",
-    "        collection='C1225776654-ASF',\n",
-    "        variable='science%2Fgrids%2Fdata%2Famplitude'), \n",
-    "        params={\n",
-    "            'subset': [\n",
-    "            'lon(37:40)', \n",
-    "            'lat(23:24)', \n",
-    "            'time(\"2014-10-30T15:00:00Z\":\"2014-10-30T15:59:00Z\")']})\n",
+    "# response = get(\n",
+    "#     coverages_root.format(\n",
+    "#         root=harmony_host_url,\n",
+    "#         collection='C1225776654-ASF',\n",
+    "#         variable='science%2Fgrids%2Fdata%2Famplitude'), \n",
+    "#         params={\n",
+    "#             'subset': [\n",
+    "#             'lon(37:40)', \n",
+    "#             'lat(23:24)', \n",
+    "#             'time(\"2014-10-30T15:00:00Z\":\"2014-10-30T15:59:00Z\")']})\n",
     "            \n",
-    "show_async_condensed(response)"
+    "# show_async_condensed(response)"
    ]
   },
   {
@@ -611,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.9.0-final"
   },
   "mimetype": "text/x-python",
   "name": "python",
