--- a/test/harmony-regression/HarmonyRegression.ipynb
+++ b/test/harmony-regression/HarmonyRegression.ipynb
@@ -26,7 +26,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "#harmony_host_url = 'https://harmony.sit.earthdata.nasa.gov'\n",
@@ -665,6 +669,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "file_extension": ".py",
   "kernelspec": {
    "display_name": "Python 3",
@@ -681,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.7.7"
   },
   "mimetype": "text/x-python",
   "name": "python",
