HARMOMY-778: Fix asf-gdal environment check

--- a/test/asf-gdal/GDAL_Subsetter_Regression.ipynb
+++ b/test/asf-gdal/GDAL_Subsetter_Regression.ipynb
@@ -57,16 +57,10 @@
    },
    "outputs": [],
    "source": [
-    "SUPPORTED_ENVS = ['uat']\n",
-    "global env\n",
-    "m = re.search('harmony(\\.|-)(.*)(\\.earthdata\\.nasa\\.gov|-frontend)', harmony_host_url)\n",
-    "env = m.group(2)\n",
-    "if env.lower() not in SUPPORTED_ENVS:\n",
-    "    print(f'{env} is not a supported environment (supported envs: {SUPPORTED_ENVS}) - skipping tests')\n",
-    "    sys.exit(0)\n",
-    "print(\"Environment: \", env)\n",
-    "if env.lower() == 'sit':\n",
-    "    print('Connect to the NASA VPN before running requests against the sit environment.')"
+    "SUPPORTED_ENVS = ['harmony.uat.earthdata.nasa.gov']\n",
+    "if harmony_host_url != 'https://harmony.uat.earthdata.nasa.gov':\n",
+    "    print(f'{harmony_host_url} is not a supported environment (supported envs: {SUPPORTED_ENVS}) - skipping tests')\n",
+    "    sys.exit(0)"
    ]
   },
   {
@@ -356,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9-final"
   }
  },
  "nbformat": 4,
