HARMONY-847: Change name of harmony service-example service.

--- a/test/harmony/Harmony.ipynb
+++ b/test/harmony/Harmony.ipynb
@@ -49,7 +49,7 @@
     "%%run_pytest[clean]\n",
     "\n",
     "@pytest.mark.parametrize('service_name', [\n",
-    "    'harmony/gdal', \n",
+    "    'harmony/service-example', \n",
     "    'asfdataservices/gdal-subsetter', \n",
     "    'podaac/l2-subsetter'\n",
     "])\n",
