HARMONY-847: Update comments.

--- a/test/harmony-regression/HarmonyRegression.ipynb
+++ b/test/harmony-regression/HarmonyRegression.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "### Sample Sync Request - Bounding Box and Temporal Subsetting with Reformatting\n",
     "\n",
-    "Harmony/gdal only working in UAT due to Harmony-600."
+    "harmony/service-example only working in UAT due to Harmony-600."
    ]
   },
   {
@@ -139,7 +139,7 @@
    "source": [
     "## Asynchronous Requests\n",
     "\n",
-    "Harmony/gdal only working in UAT due to Harmony-600."
+    "harmony/service-example only working in UAT due to Harmony-600."
    ]
   },
   {
@@ -170,7 +170,7 @@
    "source": [
     "## Cancel Async Requests\n",
     "\n",
-    "Harmony/gdal only working in UAT due to Harmony-600."
+    "harmony/service-example only working in UAT due to Harmony-600."
    ]
   },
   {
