DAS-1115 - Consolidate Data Services regression tests in a new Jupyter notebook.

--- a/test/harmony-regression/HarmonyRegression.ipynb
+++ b/test/harmony-regression/HarmonyRegression.ipynb
@@ -357,106 +357,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SWOT Reprojection Tool\n",
+    "### Data Services:\n",
     "\n",
-    "Only available in UAT. Remove UAT or SIT if statements and test/modify requests when available in PROD."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#Shows original test data for easy visual comparison\n",
+    "The following services are tested in the `SDS_Regression.ipynb` Jupyter notebook:\n",
     "\n",
-    "if is_not_prod:\n",
-    "    response = get('https://harmony.uat.earthdata.nasa.gov/service-results/harmony-uat-staging/public/harmony_example_l2/nc/015_02_210_europe.nc')\n",
-    "    show(response, example_vars)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### SWOT Reprojection Tool (Sync)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "if is_not_prod:\n",
-    "    response = get(\n",
-    "        coverages_root.format(\n",
-    "            root=harmony_host_url,\n",
-    "            collection=l2_collection, \n",
-    "            variable='all'), \n",
-    "        params={\n",
-    "            'outputCrs': 'EPSG:4326',\n",
-    "            'subset': 'time(\"2020-01-15T16:00:00Z\":\"2020-01-15T17:00:00Z\")'})\n",
-    "    show(response, example_vars)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "if is_not_prod:\n",
-    "    response = get(\n",
-    "    coverages_root.format(\n",
-    "        root=harmony_host_url,\n",
-    "        collection=l2_collection, \n",
-    "        variable='all'), \n",
-    "    params={\n",
-    "        'outputCrs': '+proj=lcc +lat_1=43 +lat_2=62 +lat_0=30 +lon_0=10 +x_0=0 +y_0=0 +ellps=intl +units=m +no_defs',\n",
-    "        'interpolation': 'near',\n",
-    "        'scaleExtent': '-4000000,-1000000,5000000,7000000',\n",
-    "        'subset': 'time(\"2020-01-15T16:00:00Z\":\"2020-01-15T17:00:00Z\")'})\n",
-    "\n",
-    "    show(response, example_vars)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### SWOT Reprojection Tool (Async)\n",
-    "\n",
-    "Only available in UAT. Remove UAT or SIT if statements and test/modify requests when available in PROD."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "if is_not_prod:\n",
-    "    response = get(\n",
-    "        coverages_root.format(\n",
-    "            root=harmony_host_url,\n",
-    "            collection=l2_collection, \n",
-    "            variable='all'), \n",
-    "        params={\n",
-    "            'outputCrs': '+proj=lcc +lat_1=43 +lat_2=62 +lat_0=30 +lon_0=10 +x_0=0 +y_0=0 +ellps=intl +units=m +no_defs',\n",
-    "            'interpolation': 'near',\n",
-    "            'scaleExtent': '-7000000,-1000000,8000000,8000000',\n",
-    "            'maxResults': '3'})\n",
-    "\n",
-    "    show_async_condensed(response, example_vars)\n"
+    "* Swath Projector (a.k.a. \"SWOT Reprojection Tool\").\n",
+    "* MaskFill.\n",
+    "* Variable Subsetter.\n",
+    "* Harmony OPeNDAP SubSetter (HOSS)."
    ]
   },
   {
@@ -533,70 +441,6 @@
     "    show_async_condensed(response, ['ssha'])\n",
     "else:\n",
     "    show_async_condensed(response, ['sea_surface_temperature'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### SDS Variable Subsetter\n",
-    "Only available in UAT. Remove UAT or SIT if statements and test/modify requests when available in PROD.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### SDS Variable Subsetter (Sync)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Re-enable this when https://bugs.earthdata.nasa.gov/browse/HYRAX-387 is fixed\n",
-    "# if is_not_prod:\n",
-    "#     response = get(\n",
-    "#         coverages_root.format(\n",
-    "#             root=harmony_host_url,\n",
-    "#             collection=var_collection, \n",
-    "#             variable='%2Fgt1l%2Fland_segments%2Fcanopy%2Fh_canopy'), \n",
-    "#         params={\n",
-    "#             'granuleid':'G1238479514-EEDTEST'\n",
-    "#         })\n",
-    "\n",
-    "#     show(response, ['/gt1l/land_segments/canopy/h_canopy'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### SDS Variable Subsetter (Async)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Re-enable this when https://bugs.earthdata.nasa.gov/browse/HYRAX-387 is fixed\n",
-    "# if is_not_prod:\n",
-    "#     response = get(\n",
-    "#         coverages_root.format(\n",
-    "#             root=harmony_host_url,\n",
-    "#             collection=var_collection, \n",
-    "#             variable='%2Fgt1l%2Fland_segments%2Fcanopy%2Fh_canopy'), \n",
-    "#             params={'maxResults': '3'})\n",
-    "\n",
-    "#     show_async_condensed(response, ['/gt1l/land_segments/canopy/h_canopy'])"
    ]
   },
   {
