Disable UAT asf notebook-fix

--- a/test/harmony-regression/HarmonyRegression.ipynb
+++ b/test/harmony-regression/HarmonyRegression.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "#harmony_host_url = 'https://harmony.sit.earthdata.nasa.gov'\n",
-    "# harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'\n",
+    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'\n",
     "#harmony_host_url = 'https://harmony.earthdata.nasa.gov'\n",
     "\n",
     "# Import libraries used throughout the notebook\n",
